--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "parse-server": "^2.2.8",
     "request": "*",
     "request-promise": "^0.4.3",
+    "serve-favicon": "^2.3.2",
     "twilio": "*",
     "underscore": "*"
   }
