--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express-session": "^1.13.0",
     "express-validator": "^2.20.3",
     "https": "^1.0.0",
+    "jwt-simple": "^0.5.1",
     "moment": "*",
+    "morgan": "^1.8.1",
     "multer": "^0.1.8",
     "nodemon": "^1.3.7",
     "parse": "^1.5.0",
