--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.3",
+    "helmet": "^3.4.0",
     "https": "^1.0.0",
     "jwt-simple": "^0.5.1",
     "moment": "*",
     "morgan": "^1.8.1",
     "multer": "^0.1.8",
+    "node-geocoder": "^3.16.0",
     "nodemon": "^1.3.7",
     "parse": "^1.5.0",
     "parse-server": "^2.2.8",
